deployment/kustomize/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: default
  annotations:
    ingress.class: "haproxy"
spec:
  rules:
  - host: testapi.goodblast.uakkok.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: goodblast-be
            port:
              number: 80
